--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.world_time_fapp">
+    package="com.aham.worldtimes">
    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="WorldTime"
+        android:label="World Times"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_worldtime">
+        android:icon="@mipmap/ic_worldtimes">
         <activity
             android:name=".MainActivity"
             android:exported="true"
